--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apollo-server": "^3.13.0",
     "bcryptjs": "^2.4.3",
     "graphql": "^16.9.0",
+    "graphql-subscriptions": "^3.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.2"
   },
